src/rust/atoms/snapshots/syn_state_machine__rust__atoms__proc_macro_items__tests_punct__concat_idents! (parse it_matches_both).snap
---
source: src/rust/atoms/proc_macro_items.rs
expression: "crate::parse::<(FJointPunct<'<'>, FAlonePunct<'='>)>(q.clone())"
---
Ok(
    (
        FJointPunct(
            Span,
        ),
        FAlonePunct(
            Span,
        ),
    ),
)
