src/rust/atoms/snapshots/syn_state_machine__rust__atoms__proc_macro_items__tests_punct__concat_idents! (parse it_matches_dollar).snap
---
source: src/rust/atoms/proc_macro_items.rs
expression: "crate::parse::<FPunct<'$'>>(q.clone())"
---
Ok(
    FPunct(
        Span,
    ),
)
