src/rust/atoms/snapshots/syn_state_machine__rust__atoms__proc_macro_items__tests_punct__concat_idents! (parse it_matches_dollar_crate).snap
---
source: src/rust/atoms/proc_macro_items.rs
expression: "crate::parse::<P<(FPunct<'$'>, FIdent<\"crate\">)>>(q.clone())"
---
Ok(
    P(
        (
            FPunct(
                Span,
            ),
            FIdent(
                Span,
            ),
        ),
    ),
)
