src/rust/atoms/snapshots/syn_state_machine__rust__atoms__proc_macro_items__tests_punct__concat_idents! (parse it_matches_only).snap
---
source: src/rust/atoms/proc_macro_items.rs
expression: "crate::parse::<Punct>(q.clone())"
---
Ok(
    Punct {
        char: '<',
        spacing: Alone,
    },
)
