src/rust/atoms/snapshots/syn_state_machine__rust__atoms__proc_macro_items__tests_punct__concat_idents! (peek it_matches_dollar_crate).snap
---
source: src/rust/atoms/proc_macro_items.rs
expression: "crate::test_peek::<(FPunct<'$'>, FIdent<\"crate\">)>(q.clone())"
---
Some(
    2,
)
