src/rust/atoms/snapshots/syn_state_machine__rust__atoms__proc_macro_items__tests_punct__concat_idents! (peek it_matches_fixed).snap
---
source: src/rust/atoms/proc_macro_items.rs
expression: "crate::test_peek::<FPunct<'<'>>(q.clone())"
---
Some(
    1,
)
