src/rust/atoms/snapshots/syn_state_machine__rust__atoms__proc_macro_items__tests_punct__concat_idents! (peek it_matches_only).snap
---
source: src/rust/atoms/proc_macro_items.rs
expression: "crate::test_peek::<Punct>(q.clone())"
---
Some(
    1,
)
